fix refresh problem and cv overflow problem

--- a/src/main/webapp/app/entities/student/student.scss
+++ b/src/main/webapp/app/entities/student/student.scss
@@ -66,9 +66,11 @@ h2
     }
 }
 
+
 .carrier
 {
     padding-top: 50px;
+
 
     .cvJobs
     {
@@ -82,9 +84,15 @@ h2
             font-size: 0.8rem;
             padding-top: 15px;
             
+            .small-card-reverse
+            {
+                margin-top: 0;
+                margin-right: 15px;
+            }
 
             .jobDescription
             {
+                overflow: hidden;
             }
 
             .tasks
